--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,22 +11,22 @@ body {
   overflow-x: hidden;
   margin-right: -webkit-calc(-1 * (100vw - 100%));
   margin-right: calc(-1 * (100vw - 100%));
-  background-color: #ffffff;
+  background-color: #fff;
   color: #606f85;
   font-family: "Poppins", Arial, sans-serif;
   font-size: 17px; }
 
-input, textarea {
+input, textarea, button {
   outline: none; }
-  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder, button::-webkit-input-placeholder {
     color: #fff !important; }
-  input::-moz-placeholder, textarea::-moz-placeholder {
+  input::-moz-placeholder, textarea::-moz-placeholder, button::-moz-placeholder {
     color: #fff !important; }
-  input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  input:-ms-input-placeholder, textarea:-ms-input-placeholder, button:-ms-input-placeholder {
     color: #fff !important; }
-  input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+  input::-ms-input-placeholder, textarea::-ms-input-placeholder, button::-ms-input-placeholder {
     color: #fff !important; }
-  input::placeholder, textarea::placeholder {
+  input::placeholder, textarea::placeholder, button::placeholder {
     color: #fff !important; }
 
 /* --- header --- */
@@ -83,7 +83,7 @@ input, textarea {
     font-weight: 600; }
   .nav-menu__link {
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
     font-size: 14px;
     text-transform: uppercase;
     padding: 0 12px;
@@ -113,24 +113,21 @@ input, textarea {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  padding-top: 100px; }
+  padding-top: 100px;
+  color: #fff;
+  font-size: 24px; }
   .banner__head {
     opacity: 0.5;
     width: 650px;
     margin: 0 auto;
-    color: #ffffff;
-    font-size: 24px;
     text-transform: uppercase; }
   .banner__info {
     display: block;
-    color: #ffffff;
     font-size: 76px;
     line-height: 120%;
     margin: 5% 0 5%; }
   .banner__descr {
     display: block;
-    color: #ffffff;
-    font-size: 24px;
     font-weight: 300;
     line-height: 50px;
     padding: 0 65px; }
@@ -142,15 +139,17 @@ input, textarea {
           border-radius: 53px;
   font-family: "Poppins", Arial, sans-serif;
   position: relative;
-  cursor: pointer; }
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: 600; }
   .btn--nav {
     display: inline;
-    color: #ffffff;
+    color: #fff;
     font-size: 14px;
     text-transform: uppercase;
     -webkit-border-radius: 27px;
             border-radius: 27px;
-    border: 2px solid #ffffff;
+    border: 2px solid #fff;
     text-decoration: none;
     padding: 20px 40px;
     -webkit-transition: 0.5s;
@@ -160,11 +159,9 @@ input, textarea {
       background-color: rgba(255, 255, 255, 0.3);
       font-size: 14px; }
   .btn--banner {
-    background-color: #ffffff;
+    background-color: #fff;
     text-decoration: none;
     color: #673fbf;
-    font-size: 24px;
-    font-weight: 600;
     margin-top: 5%;
     padding: 43px 64px 43px 64px;
     text-transform: uppercase;
@@ -202,32 +199,28 @@ input, textarea {
     background-color: #673fbf;
     -webkit-box-shadow: 0 17px 25px rgba(122, 135, 157, 0.39);
             box-shadow: 0 17px 25px rgba(122, 135, 157, 0.39);
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: 600;
+    color: #fff;
     text-transform: uppercase;
     text-decoration: none;
     padding: 41px 63px;
     margin: 60px 0 100px; }
   .btn--contact {
-    background-color: #ffffff;
+    background-color: #fff;
     color: #673fbf;
     padding: 41px 63px;
-    font-size: 24px;
-    font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
     margin: 1% 0 2%; }
   .btn--popup {
     display: block;
     margin: 0 auto 10px;
-    color: #ffffff;
+    color: #fff;
     background: transparent;
     font-size: 14px;
     text-transform: uppercase;
     -webkit-border-radius: 27px;
             border-radius: 27px;
-    border: 2px solid #ffffff;
+    border: 2px solid #fff;
     text-decoration: none;
     padding: 10px 20px; }
   .btn--up {
@@ -243,7 +236,6 @@ input, textarea {
     background: rgba(255, 255, 255, 0.7);
     color: #673fbf;
     font-size: 9px;
-    font-weight: 600;
     padding-top: 1px;
     margin-right: -webkit-calc(-1 * (100vw - 100%));
     margin-right: calc(-1 * (100vw - 100%)); }
@@ -296,9 +288,6 @@ input, textarea {
 
 /* --- pulse button end --- */
 /* --- slick slider --- */
-.slick-list {
-  overflow: visible; }
-
 .about-client__slider-controls {
   display: inline-block; }
   .about-client__slider-controls .slick-dots {
@@ -394,12 +383,12 @@ input, textarea {
     background-color: #673fbf;
     margin: 49px auto; }
   .title--services {
-    color: #ffffff; }
+    color: #fff; }
     .title--services:after {
       background-color: #fff; }
   .title--contact {
     padding-top: 4%;
-    color: #ffffff; }
+    color: #fff; }
     .title--contact:after {
       background-color: #fff; }
   .title--popup {
@@ -413,21 +402,18 @@ input, textarea {
 .text {
   padding: 10px 30px;
   line-height: 32px;
-  text-align: center; }
+  text-align: center;
+  font-weight: 300;
+  margin: 0 auto; }
   .text--services {
     width: 540px;
-    margin: 0 auto;
-    color: #fff;
-    font-weight: 300; }
+    color: #fff; }
   .text--portfolio {
-    width: 500px;
-    margin: 0 auto; }
+    width: 500px; }
   .text--portfolio-slider {
     text-align: left;
     padding: 20px 0 40px;
-    color: #606f85;
-    font-weight: 300;
-    line-height: 32px; }
+    color: #606f85; }
 
 /* --- section about & about-client --- */
 .about {
@@ -459,9 +445,9 @@ input, textarea {
           box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06);
   -webkit-border-radius: 6px;
           border-radius: 6px;
-  background-color: #ffffff;
+  background-color: #fff;
   position: relative;
-  padding: 80px 80px 0; }
+  padding: 120px 80px 0; }
   .client__info {
     padding: 40px 0;
     font-weight: 600; }
@@ -476,7 +462,7 @@ input, textarea {
     -webkit-border-radius: 50%;
             border-radius: 50%;
     position: absolute;
-    top: -17%;
+    top: 0;
     left: 50%;
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
@@ -492,14 +478,13 @@ input, textarea {
 .services-item {
   display: inline-block;
   vertical-align: top;
-  text-align: left;
   margin: 90px 30px;
   width: 370px;
   -webkit-box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
           box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
   -webkit-border-radius: 5px;
           border-radius: 5px;
-  background-color: #ffffff;
+  background-color: #fff;
   position: relative; }
   .services-item__text {
     text-align: left; }
@@ -538,20 +523,18 @@ input, textarea {
   display: block !important;
   text-align: left;
   margin: 0 auto;
-  overflow: hidden;
   width: 1170px !important;
   height: 587px;
   -webkit-box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
           box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
   -webkit-border-radius: 5px;
           border-radius: 5px;
-  background-color: #ffffff;
+  background-color: #fff;
   vertical-align: top; }
   .portfolio-slider-item__info {
     position: relative;
     display: inline-block;
     width: 50%;
-    vertical-align: top;
     padding: 50px 44px 10px; }
     .portfolio-slider-item__info .portfolio-slider-buttons {
       position: absolute;
@@ -621,7 +604,7 @@ input, textarea {
     width: 100%;
     height: 64px;
     padding: 11px 30px 10px 50px;
-    color: #ffffff;
+    color: #fff;
     font-family: "Poppins", sans-serif;
     font-size: 17px;
     font-weight: 300;
