--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -65,7 +65,7 @@
                 font-weight: 400
             &__link
                 font-size: 12px
-                padding: 0px 8px
+                padding: 0 8px
         &-logo
             top: -50%
 
@@ -113,9 +113,7 @@
         padding: 5px 20px
         line-height: 16px
         &--portfolio-slider
-            padding: 15px 0px
-        //&-client
-            padding: 60px 30px
+            padding: 15px 0
 
     .title
         font-size: 30px
@@ -134,11 +132,10 @@
 
     .client
         width: 95% !important
-        padding: 70px 60px 0px
+        padding: 70px 60px 0
         &__photo
             width: 100px
             height: 100px
-            top: -14%
 
     .services-item
         width: 370px
@@ -185,7 +182,7 @@
         min-height: 575px
 
     .nav
-        top: 0px
+        top: 0
         &-logo
             top: 6px
         &-toggle
@@ -216,10 +213,9 @@
             &__link
                 display: block
                 padding: 10px 20px
+                color: #bc52a8
                 &:hover
                     font-size: 12px
-                    border-radius: none
-                    background-color: none
 
     .btn
         &--nav
@@ -245,11 +241,10 @@
     .client
         width: 80% !important
         margin-bottom: 50px
-        padding: 50px 40px 0px
+        padding: 70px 40px 0
         &__photo
             width: 70px
             height: 70px
-            top: -12%
 
     .about-client
         &__quotes
@@ -261,8 +256,8 @@
 
     .portfolio-slider
         &-item
-            width: 300px !important;
-            height: 600px;
+            width: 300px !important
+            height: 600px
             &__icon
                 display: none
             &__img
@@ -279,7 +274,7 @@
 
     .text
         &--portfolio-slider
-            padding: 0px
+            padding: 0
 
     .skills
         margin-top: 5px
@@ -291,6 +286,8 @@
 @media screen and (max-width: 576px)
     .container
         width: 90%
+        &--about
+            overflow: hidden
 
     .nav
         top: 35px
@@ -322,7 +319,7 @@
             font-size: 9px
 
     .client
-        padding: 35px 20px 0px
+        padding: 70px 20px 0
         &__info
             padding-top: 20px
 
@@ -360,7 +357,6 @@
     .portfolio-slider
         &-item
             width: 80% !important
-            height: 250px
             &__info
                 &__icon
                     display: none
@@ -434,7 +430,6 @@
         &__photo
             width: 50px
             height: 50px
-            top: -2%
 
     .about-client__slider-controls .slick-dots
         display: none
