--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -318,8 +318,8 @@
         &--nav
             padding: 5px 10px
         &--up
-            padding: 1px 0 0 1px
-            font-size: 9px
+            padding: 8px 0 0 2px
+            font-size: 14px
 
     .client
         width: 300px !important
@@ -346,7 +346,7 @@
             display: none
 
     .slick-dots
-        display: none
+        display: none !important
 
     .services-item
         width: 270px
@@ -416,12 +416,10 @@
             padding: 10px
             font-weight: 300
         &--up
-            padding: 0 0 0 1px
-            font-size: 6px
-            width: 15px
-            height: 6px
-            bottom: 25px
-            right: 60px
+            width: 30px
+            height: 30px
+            bottom: 9%
+            padding: 9px
 
     .title
         &--texted
