some fixes with btn--up and slick

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -219,6 +219,11 @@ input:-webkit-autofill
         background: rgba(255, 255, 255, .7)
         color: #673fbf
         margin-right: calc(-1 * (100vw - 100%))
+        &__text
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
 
 /* --- pulse button --- */
 
